--- a/static/elhefe/index.html
+++ b/static/elhefe/index.html
@@ -28,7 +28,7 @@
 <script id="admin-config-script" type="text/javascript">
     var env = {
         siteId: "bknplar1v3nalq",
-        local: false
+        local: true
     };
 </script>
 <script type="application/javascript" src="https://local.forestry.io/forestry.min.js"></script>
