--- a/static/elhefe/index.html
+++ b/static/elhefe/index.html
@@ -29,7 +29,7 @@
 <script id="admin-config-script" type="text/javascript">
     var env = {
         siteId: "bknplar1v3nalq",
-        local: true
+        local: false
     };
 </script>
 <script type="application/javascript" src="https://local.forestry.io/forestry.min.js"></script>
